# Projet4

./: initialisation_bdd  kernel.sh  presentation.odp  projet4.ipynb  projet4_v2.ipynb  pyproject.toml  rapport_final.html  salaire_moyen_par_posteVStarget.csv
